fix: prevent line breaks in mobile navigation bar

--- a/css/layout.css
+++ b/css/layout.css
@@ -346,7 +346,7 @@ main {
 
   .nav-item {
     flex-direction: column;
-    padding: 10px;
+    padding: 4px;
     width: auto;
     border-radius: 8px;
     cursor: pointer;
